--- a/examples/veins/omnetpp.ini
+++ b/examples/veins/omnetpp.ini
@@ -14,7 +14,7 @@ network = RSUExampleScenario
 debug-on-errors = true
 print-undisposed = true
 
-sim-time-limit = 70s
+sim-time-limit = 200s
 
 **.scalar-recording = true
 **.vector-recording = true
@@ -54,8 +54,8 @@ sim-time-limit = 70s
 
 *.rsu[*].applType = "TraCIDemoRSU11p"
 *.rsu[*].appl.headerLength = 80 bit
-*.rsu[*].appl.sendBeacons = true
-*.rsu[*].appl.dataOnSch = true
+*.rsu[*].appl.sendBeacons = false
+*.rsu[*].appl.dataOnSch = false
 *.rsu[*].appl.beaconInterval = 1s
 *.rsu[*].appl.beaconUserPriority = 7
 *.rsu[*].appl.dataUserPriority = 5
@@ -67,13 +67,13 @@ sim-time-limit = 70s
 #                    NIC-Settings                        #
 ##########################################################
 *.connectionManager.sendDirect = true
-*.connectionManager.maxInterfDist = 5000m
+*.connectionManager.maxInterfDist = 2600m
 *.connectionManager.drawMaxIntfDist = false
 
 *.**.nic.mac1609_4.useServiceChannel = false
 
-*.**.nic.mac1609_4.txPower = 80mW
-*.**.nic.mac1609_4.bitrate = 27Mbps
+*.**.nic.mac1609_4.txPower = 20mW
+*.**.nic.mac1609_4.bitrate = 6Mbps
 *.**.nic.phy80211p.minPowerLevel = -110dBm
 
 *.**.nic.phy80211p.useNoiseFloor = true
@@ -92,8 +92,8 @@ sim-time-limit = 70s
 ##########################################################
 *.node[*].applType = "TraCIDemo11p"
 *.node[*].appl.headerLength = 80 bit
-*.node[*].appl.sendBeacons = true
-*.node[*].appl.dataOnSch = true
+*.node[*].appl.sendBeacons = false
+*.node[*].appl.dataOnSch = false
 *.node[*].appl.beaconInterval = 1s
 
 ##########################################################
